Fix low contrast on nav menu active links

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -40,7 +40,8 @@ nav a {
 }
 
 nav a.router-link-exact-active {
-    color: red;
+    color: white;
+    background-color: #111;
 }
 
 .card {
